--- a/tests/web/runner.html
+++ b/tests/web/runner.html
@@ -6,12 +6,24 @@
     <!-- QUnit files -->
     <link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.17.1.css">
     <script src="http://code.jquery.com/qunit/qunit-1.17.1.js"></script>
+
+    <!-- JQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     
     <!-- Your project file goes here -->
-    <!-- <script type="text/javascript" src="myProject.js"></script>-->
+    <script src="../../src/static/js/apps/ide.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../../src/static/js/apps/chat.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../../src/static/js/modules/treeView.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../../src/static/js/modules/localChanges.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../../src/static/js/modules/lastVersionZone.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../../src/static/js/modules/displayZone.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../../src/static/js/modules/requestHandler.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../../src/static/js/utils/helper.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../../src/static/js/utils/representation.js" type="text/javascript" charset="utf-8"></script>  
+    <script src="../../src/static/js/libs/diff_match_patch.js" type="text/javascript" charset="utf-8"></script>
 
     <!-- Your tests file goes here -->
-    <script type="text/javascript" src="tests/test1.js"></script>
+    <script type="text/javascript" src="tests/test_LocalChanges.js"></script>
 </head>
 <body>
     <h1 id="qunit-header">QUnit Test Suite</h1>
