Unit tests for Last Version Zone

--- a/tests/web/runner.html
+++ b/tests/web/runner.html
@@ -24,6 +24,7 @@
 
     <!-- Your tests file goes here -->
     <script type="text/javascript" src="tests/test_LocalChanges.js"></script>
+    <script type="text/javascript" src="tests/test_LastVersionZone.js"></script>
   </head>
   <body>
     <h1 id="qunit-header">QUnit Test Suite</h1>
