Adding tests and fixed

--- a/tests/web/runner.html
+++ b/tests/web/runner.html
@@ -26,6 +26,7 @@
     <script type="text/javascript" src="tests/test_LocalChanges.js"></script>
     <script type="text/javascript" src="tests/test_LastVersionZone.js"></script>
     <script type="text/javascript" src="tests/test_Display.js"></script>
+    <script type="text/javascript" src="tests/test_Helper.js"></script>
   </head>
   <body>
     <h1 id="qunit-header">QUnit Test Suite</h1>
